# RageShellIconHandler

./: CMakeLists.txt
src/: CMakeLists.txt  exports.def
src/factory/: factory.cpp  factory.h
src/handler/: handler.cpp  handler.h
src/main/: config.h  dllmain.cpp
src/registry/: registry.cpp  registry.h
src/resources/: resource.h  resource.rc
src/util/: util.cpp  util.h
